# mcp-host-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  agent.toml.example  package-lock.json  package.json  vite.config.js  启动 MCP Host Agent.bat
.github/: RELEASE_v0.1.0.md  RELEASE_v0.1.1.md
docs/: INTEGRATION.md
scripts/: copy-server.js
src/: activity.rs  audit.rs  config.rs  lib.rs  main.rs  manager.rs  paths.rs  search.rs  serve.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tunnel.rs
ui/: index.html  main.js  stream.css  stream.html  stream.js  styles.css
