[package]
name = "mcp-host-agent-app"
version = "0.1.0"
description = "MCP Host Agent desktop manager"
authors = ["zhlong"]
edition = "2021"

[lib]
name = "mcp_host_agent_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mcp-host-agent = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { workspace = true, features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
